kubernetes/overlay/prod/prod-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubecolors-prod
  labels:
    app: kubecolors-prod
